etc/kubernetes/webui-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webui
spec:
  selector: 
    matchLabels: 
      app: webui
  template:
    metadata: 
      labels: 
        app: webui
    spec:
      containers: 
        -
          image: openshiftacademiaonline/dockercoins-ops:webui-latest
          name: node
          ports: 
            -
              containerPort: 8080
