etc/kubernetes/worker-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
spec:
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        -
          image: openshiftacademiaonline/dockercoins-dev:1.2-worker
          name: python
