etc/kubernetes/hasher-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hasher
spec:
  ingress:
    - 
      from: 
        - 
          podSelector: 
            matchLabels: 
              app: worker              
      ports: 
        - 
          port: 8080
  podSelector: 
    matchLabels: 
      app: hasher
