etc/kubernetes/redis-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis
spec:
  ingress:
    - 
      from: 
        - 
          podSelector: 
            matchLabels: 
              app: webui     
        - 
          podSelector: 
            matchLabels: 
              app: worker
      ports: 
        - 
          port: 6379
  podSelector: 
    matchLabels: 
      app: redis
